idbp prototype & idb-plus wip

--- a/apps/configure/tsconfig.app.json
+++ b/apps/configure/tsconfig.app.json
@@ -27,6 +27,8 @@
     "paths": {
       "~/*": ["./src/*"],
       "~c/*": ["./src/components/*"],
+      "idbp": ["./src/lib/idbp/index"],
+      "idbp/utils": ["./src/lib/idbp/utils"],
     },
     "types": ["vite/client", "@mattrax/ui/types"],
   },
