regig forms + accordion + configure: create user

--- a/package.json
+++ b/package.json
@@ -29,19 +29,20 @@
 		"@biomejs/biome": "^1.8.3",
 		"@solidjs/start": "1.0.6",
 		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.23.2",
+		"drizzle-kit": "^0.24.0",
 		"pg": "^8.12.0",
-		"tsx": "^4.16.5",
+		"tsx": "^4.17.0",
 		"typescript": "^5.5.4"
 	},
 	"devDependencies": {
 		"husky": "^9.1.4",
 		"nx": "19.5.7",
-		"wrangler": "^3.69.1"
+		"wrangler": "^3.70.0"
 	},
 	"pnpm": {
 		"patchedDependencies": {
-			"@solidjs/start@1.0.6": "patches/@solidjs__start@1.0.6.patch"
+			"@solidjs/start@1.0.6": "patches/@solidjs__start@1.0.6.patch",
+			"@tanstack/solid-form": "patches/@tanstack__solid-form.patch"
 		}
 	}
 }
