--- a/apps/platform/Cargo.toml
+++ b/apps/platform/Cargo.toml
@@ -64,3 +64,4 @@ temp-dir = "0.1.13"
 reqwest = { version = "0.12.5", features = ["stream"] }
 http = "1.1.0"
 chrono = { version = "0.4.38", features = ["serde"] }
+tower-http = { version = "0.5.2", features = ["trace"] }
