--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ inherits = "release"
 lto = "thin"
 
 [workspace.dependencies]
+tracing = { version = "^0.1" }
+tokio = { version = "^1", features = [
+  "macros",
+  "rt-multi-thread",
+] }
+axum = { version = "^0.7" }
 serde = { version = "^1", features = ["derive"] }
 serde_json = { version = "^1" }
 specta = { version = "=2.0.0-rc.11", features = [
@@ -36,9 +42,6 @@ easy-xml-derive = { git = "https://github.com/oscartbeaumont/easy-xml", rev = "f
 
 # Support for latest mysql-async - https://github.com/rust-db/refinery/pull/327
 refinery-core = { git = "https://github.com/rust-db/refinery", rev = "ff1c5c07c00f196e8ec4f10827ab882db2fd9d14" }
-
-# https://github.com/zkat/chownr-rs/pull/1
-chownr = { git = "https://github.com/oscartbeaumont/chownr-rs", rev = "05101de6d2eb27a18374688f9339772aff827f85" }
 
 # TODO: This should only be used when using SST Live Lambda!
 lambda_runtime = { git = "https://github.com/oscartbeaumont/aws-lambda-rust-runtime", rev = "9d75ac7168dd6869bfa8deb1bc83018830dc617f" }
