--- a/apps/cloud/Cargo.toml
+++ b/apps/cloud/Cargo.toml
@@ -1,67 +1,18 @@
 [package]
-name = "mattrax-platform"
-description = "" # TODO
+name = "mattrax-cloud"
+description = "Services for Mattrax's Cloud offering"
 version = "0.0.1"
 edition = "2021"
 publish = false
 
-# TODO: Prune dependencies
 [dependencies]
-mx-utils = { path = "../../crates/mx-utils" }
-ms-mde = { path = "../../crates/ms-mde" }
-mx-windows = { path = "../../crates/mx-windows" }
-mx-db = { path = "../../crates/mx-db" }
 mx-manage = { path = "../../crates/mx-manage" }
 
+tracing = { workspace = true }
+axum = { workspace = true, features = ["http2", "macros", "ws"] }
+tokio = { workspace = true }
+
 lambda_http = "0.13.0"
-tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-tokio = { version = "1.39.2", features = [
-  "macros",
-  "rt-multi-thread",
-  "process",
-  "signal"
-] }
-clap = { version = "4.5.13", features = ["derive"] }
-axum = { version = "0.7.5", features = ["http2", "macros", "ws"] }
-axum-extra = { version = "0.9.3", features = ["cookie"] }
-rustls = { version = "0.23.12", features = ["ring"] }
-futures-rustls = "0.26.0"
-tower = "0.4.13"
-hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
-tokio-util = { version = "0.7.11", features = ["compat"] }
-hyper-util = { version = "0.1.7", features = [
-  "http1",
-  "http2",
-  "server-auto",
-  "tokio",
-] }
-thiserror = "1.0.63"
-serde = { workspace = true }
-serde_json = { workspace = true }
-tokio-stream = "0.1.15"
-getrandom = "0.2.15"
 rcgen = { version = "0.13.1", features = ["x509-parser"] }
-base64 = "0.22.1"
-sha1 = "0.10.6"
-hex = "0.4.3"
-futures = { version = "0.3.30", default-features = false }
-cuid2 = "0.1.2"
-time = "0.3.36"
-urlencoding = "2.1.3"
-hmac = "0.12.1"
-jwt = "0.16.0"
-sha2 = "0.10.8"
-x509-parser = "0.16.0"
-mysql_async = { version = "0.34.1", default-features = false }
-openssl = { version = "0.10.66", features = ["vendored"] }
-arc-swap = "1.7.1"
-rand = "0.8.5"
-nix = { version = "0.29.0", features = ["user"] }
-chownr = "3.0.0"
-include_dir = "0.7.4"
-temp-dir = "0.1.13"
-reqwest = { version = "0.12.5", features = ["stream"] }
-http = "1.1.0"
-chrono = { version = "0.4.38", features = ["serde"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
