--- a/apps/mattraxd/Cargo.toml
+++ b/apps/mattraxd/Cargo.toml
@@ -11,6 +11,7 @@ dist = true
 [dependencies]
 mx-utils = { path = "../../crates/mx-utils" }
 
+tracing = { workspace = true }
+
 clap = { version = "4.5.13", features = ["derive"] }
 tracing-subscriber = "0.3.18"
-tracing = "0.1.40"
