--- a/apps/mttx/Cargo.toml
+++ b/apps/mttx/Cargo.toml
@@ -5,20 +5,18 @@ version = "0.0.1"
 edition = "2021"
 publish = false
 
-[package.metadata.dist]
-dist = true
-
 [dependencies]
 mx-utils = { path = "../../crates/mx-utils" }
 ms-mdm = { path = "../../crates/ms-mdm" }
 
-clap = { version = "4.5.13", features = ["derive"] }
-tracing-subscriber = "0.3.18"
-tracing = "0.1.40"
+tracing = { workspace = true }
+tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+
+clap = { version = "4.5.13", features = ["derive"] }
+tracing-subscriber = "0.3.18"
 serde_yaml = "0.9.34"
-tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
 graph-rs-sdk = "2.0.0"
 reqwest = { version = "0.12.5", features = ["json"] }
 urlencoding = "2.1.3"
