--- a/crates/mx-windows/Cargo.toml
+++ b/crates/mx-windows/Cargo.toml
@@ -12,7 +12,8 @@ ms-mde = { path = "../ms-mde" }
 
 serde = { workspace = true }
 serde_json = { workspace = true }
-tracing = "0.1.40"
+tracing = { workspace = true }
+
 rustls = "0.23.12"
 x509-parser = { version = "0.16.0", features = ["verify"] }
 futures = { version = "0.3.30", features = ["async-await"] }
