Upgrade workspace dependencies

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,7 +27,7 @@
 		"@mattrax/web": "file:",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@paralleldrive/cuid2": "^2.2.2",
-		"@planetscale/database": "^1.18.0",
+		"@planetscale/database": "^1.19.0",
 		"@simplewebauthn/browser": "^10.0.0",
 		"@simplewebauthn/server": "^10.0.1",
 		"@simplewebauthn/typescript-types": "^8.3.4",
@@ -44,16 +44,16 @@
 		"@solid-primitives/storage": "^4.0.0",
 		"@solid-primitives/timer": "^1.3.9",
 		"@solid-primitives/websocket": "^1.2.2",
-		"@solidjs/router": "0.14.1",
+		"@solidjs/router": "0.14.3",
 		"@solidjs/start": "1.0.6",
 		"@t3-oss/env-core": "^0.11.0",
-		"@tanstack/solid-form": "^0.28.0",
-		"@tanstack/solid-query": "^5.51.21",
-		"@tanstack/solid-query-devtools": "^5.51.21",
-		"@tanstack/solid-query-persist-client": "^5.51.21",
+		"@tanstack/solid-form": "^0.29.2",
+		"@tanstack/solid-query": "^5.52.0",
+		"@tanstack/solid-query-devtools": "^5.52.0",
+		"@tanstack/solid-query-persist-client": "^5.52.0",
 		"@tanstack/solid-table": "^8.20.1",
-		"@tanstack/solid-virtual": "^3.8.6",
-		"@tanstack/zod-form-adapter": "^0.28.0",
+		"@tanstack/solid-virtual": "^3.10.4",
+		"@tanstack/zod-form-adapter": "^0.29.2",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"@types/pluralize": "^0.0.33",
@@ -66,36 +66,36 @@
 		"dexie": "^4.0.8",
 		"drizzle-orm": "^0.33.0",
 		"h3": "^1.12.0",
-		"hono": "^4.5.5",
-		"jose": "^5.6.3",
+		"hono": "^4.5.8",
+		"jose": "^5.7.0",
 		"lucia": "^3.2.0",
 		"oslo": "^1.2.1",
 		"pluralize": "^8.0.0",
-		"prism-code-editor": "3.4.0-beta.2",
+		"prism-code-editor": "3.4.0",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"solid-js": "^1.8.20",
+		"solid-js": "^1.8.21",
 		"solid-presence": "^0.1.8",
 		"solid-sonner": "^0.2.8",
 		"solid-transition-group": "^0.2.3",
-		"sst": "3.0.30",
-		"stripe": "^16.7.0",
+		"sst": "3.0.70",
+		"stripe": "^16.8.0",
 		"superjson": "^2.2.1",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^3.4.10",
 		"ts-pattern": "^5.3.1",
 		"vinxi": "0.4.1",
 		"xml2js": "^0.6.2",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.236",
+		"@iconify/json": "^2.2.241",
 		"@microsoft/microsoft-graph-types": "^2.40.0",
 		"@simplewebauthn/types": "^10.0.0",
 		"@tailwindcss/forms": "^0.5.7",
 		"@types/prismjs": "^1.26.4",
-		"@types/react": "^18.3.3",
+		"@types/react": "^18.3.4",
 		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "^10.4.20",
 		"mysql2": "^3.11.0",
@@ -107,7 +107,7 @@
 		"unenv": "^1.10.0",
 		"unplugin-auto-import": "^0.18.2",
 		"unplugin-icons": "^0.19.2",
-		"vite": "^5.4.0",
+		"vite": "^5.4.2",
 		"vite-plugin-html": "^3.2.2",
 		"vite-plugin-solid": "^2.10.2",
 		"vite-tsconfig-paths": "^5.0.1"
