--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -7,7 +7,8 @@
 		"jsxImportSource": "solid-js",
 		"types": ["vinxi/client", "vite/client", "@mattrax/ui/types"],
 		"paths": {
-			"~/*": ["./src/*"]
+			"~/*": ["./src/*"],
+			"content-collections": ["./.content-collections/generated"]
 		}
 	},
 	"include": ["src/"],
