--- a/apps/ingest/Cargo.toml
+++ b/apps/ingest/Cargo.toml
@@ -5,12 +5,15 @@ edition = "2021"
 publish = false
 
 [dependencies]
-easy-xml = "0.1.4"
 ms-ddf = { path = "../../crates/ms-ddf" }
 apple-pfm = { path = "../../crates/apple-pfm" }
+
 serde = { workspace = true }
 serde_json = { workspace = true }
 specta = { workspace = true }
+specta-typescript = { workspace = true }
+
+easy-xml = "0.1.4"
 glob = "0.3.1"
 plist = "1.7.0"
 nom = "7.1.3"
