--- a/apps/cloud/Cargo.toml
+++ b/apps/cloud/Cargo.toml
@@ -20,4 +20,5 @@ lambda_http = "0.13.0"
 tracing-subscriber = "0.3.18"
 rcgen = { version = "0.13.1", features = ["x509-parser"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
+axum-extra = { version = "0.9.3", features = ["cookie"] }
 reqwest = "0.12.7"
