--- a/apps/cloud/Cargo.toml
+++ b/apps/cloud/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 publish = false
 
 [dependencies]
-mx-core = { path = "../../crates/mx-core" }
 mx-manage = { path = "../../crates/mx-manage" }
 
 tracing = { workspace = true }
@@ -15,6 +14,8 @@ serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true }
 rspc-axum = { workspace = true }
 rspc-openapi = { workspace = true }
+
+openssl = { version = "0.10.66", features = ["vendored"] }
 
 lambda_http = "0.13.0"
 tracing-subscriber = "0.3.18"
