--- a/apps/cloud/Cargo.toml
+++ b/apps/cloud/Cargo.toml
@@ -4,16 +4,18 @@ description = "Services for Mattrax's Cloud offering"
 version = "0.0.1"
 edition = "2021"
 publish = false
+default-run = "axum"
 
 [dependencies]
 mx-manage = { path = "../../crates/mx-manage" }
+mx-db = { path = "../../crates/mx-db" }
 
 tracing = { workspace = true }
 axum = { workspace = true, features = ["http2", "macros", "ws"] }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true }
-rspc-axum = { workspace = true }
-rspc-openapi = { workspace = true }
+serde_json = { workspace = true }
+mysql_async = { workspace = true }
 
 openssl = { version = "0.10.66", features = ["vendored"] }
 
@@ -24,3 +26,5 @@ tower-http = { version = "0.5.2", features = ["trace"] }
 axum-extra = { version = "0.9.3", features = ["cookie"] }
 reqwest = "0.12.7"
 ms-mdm = { version = "0.0.1", path = "../../crates/ms-mdm" }
+base64 = "0.22.1"
+cuid2 = "0.1.3"
