--- a/crates/mx-db/Cargo.toml
+++ b/crates/mx-db/Cargo.toml
@@ -5,15 +5,11 @@ edition = "2021"
 publish = false
 
 [dependencies]
-mysql_async = { version = "0.34.2", default-features = false, features = [
-    "default-rustls",
-    "derive",
-    "tracing",
-    "chrono",
-] }
+mysql_async = { workspace = true }
+serde_json = { workspace = true }
+
 mysql_common = { version = "0.32", features = [
     "chrono",
 ] } # This is a dependency of `mysql_async`
 chrono = { version = "0.4.38", features = ["serde"] }
-serde_json = { workspace = true }
 refinery = { version = "0.8.14", features = ["mysql_async"] }
