--- a/crates/mx-manage/Cargo.toml
+++ b/crates/mx-manage/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 ms-mde = { path = "../../crates/ms-mde" }
 
 tracing = { workspace = true }
-axum = { workspace = true, no-default-features = true } # TODO: Maybe removing this???
+axum = { workspace = true } # TODO: Maybe removing this???
 serde = { workspace = true }
 
 rcgen = { version = "0.13.1", features = ["x509-parser"] }
