Web's env + wip email

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,8 @@
 VITE_PROD_ORIGIN=http://localhost:3000
 DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
+MANAGE_URL=https://mdm.example.com
 
-# Rust
 INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
-MDM_URL=https://mdm.example.com
-ENTERPRISE_ENROLLMENT_URL=https://enterpriseenrollment.example.com
-
-# Billing
-STRIPE_PUBLISHABLE_KEY=
-STRIPE_SECRET_KEY=
 
 # Syncing users
 ENTRA_CLIENT_ID=
@@ -19,5 +13,5 @@ FROM_ADDRESS=console
 # AWS_ACCESS_KEY_ID=
 # AWS_SECRET_ACCESS_KEY=
 
-# Used for landing only
+# For `apps/landing`
 VITE_MATTRAX_CLOUD_ORIGIN=http://localhost:3000 # Should point to `apps/web`
