--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ FROM_ADDRESS=console
 
 # For `apps/landing`
 VITE_MATTRAX_CLOUD_ORIGIN=http://localhost:3000 # Should point to `apps/web`
+RUST_URL=http://example.com
