--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
 		"@solid-primitives/map": "^0.4.12",
 		"@solid-primitives/memo": "^1.3.9",
 		"@solid-primitives/scheduled": "^1.4.3",
+		"@solid-primitives/set": "^0.4.12",
 		"@solid-primitives/storage": "^4.2.1",
 		"@solid-primitives/timer": "^1.3.10",
 		"@solid-primitives/websocket": "^1.2.2",
@@ -80,6 +81,7 @@
 		"solid-sonner": "^0.2.8",
 		"solid-transition-group": "^0.2.3",
 		"sst": "3.1.14",
+		"string-similarity-js": "^2.1.4",
 		"stripe": "^16.11.0",
 		"superjson": "^2.2.1",
 		"tailwindcss": "^3.4.12",
