--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,14 +9,15 @@
 		"./plugin": "./src/plugin.js"
 	},
 	"scripts": {
-		"build": "tsx ./deploy.ts"
+		"build": "tsx ./build.ts"
 	},
 	"dependencies": {
-		"@hono/vite-dev-server": "^0.16.0",
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@mattrax/email": "workspace:*",
 		"@mattrax/mysql-planetscale": "^0.0.3",
 		"@mattrax/trpc-server-function": "workspace:*",
+		"@microlabs/otel-cf-workers": "1.0.0-rc.48",
+		"@opentelemetry/api": "^1.9.0",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@planetscale/database": "^1.19.0",
 		"@solidjs/router": "0.14.5",
@@ -29,16 +30,19 @@
 		"lucia": "^3.2.0",
 		"node-forge": "^1.3.1",
 		"oslo": "^1.2.1",
-		"vinxi": "0.4.3",
+		"seroval": "^1.1.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20240924.0",
 		"@types/node": "^22.5.5",
 		"@types/node-forge": "^1.3.11",
 		"@whatwg-node/server": "^0.9.49",
+		"esbuild": "^0.24.0",
+		"esbuild-plugin-solid": "^0.6.0",
 		"vite": "^5.4.6"
 	},
 	"peerDependencies": {
-		"solid-js": "^1.8.22"
+		"solid-js": "*"
 	}
 }
