--- a/packages/trpc-server-function/package.json
+++ b/packages/trpc-server-function/package.json
@@ -8,16 +8,19 @@
 	"exports": {
 		".": "./src/index.ts",
 		"./server": "./src/server.ts",
-		"./client": "./src/client.ts"
+		"./client": "./src/client.ts",
+		"./seroval": "./src/seroval.ts"
 	},
 	"dependencies": {
 		"@solid-mediakit/trpc": "^3.0.3",
 		"@solidjs/router": "0.14.5",
 		"@tanstack/query-core": "^5.56.2",
 		"@trpc/client": "^10.45.2",
-		"@trpc/server": "^10.45.2"
+		"@trpc/server": "^10.45.2",
+		"seroval": "^1.1.1"
 	},
 	"peerDependencies": {
-		"vinxi": "*"
+		"vinxi": "*",
+		"solid-js": "*"
 	}
 }
