--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -20,6 +20,7 @@
 		"solid-js": "^1.8.22",
 		"vinxi": "0.4.3",
 		"vite": "^5.4.6",
+		"vite-tsconfig-paths": "^5.0.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
