--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
 		"@mattrax/email": "workspace:*",
 		"@mattrax/mysql-planetscale": "^0.0.3",
 		"@mattrax/trpc-server-function": "workspace:*",
+		"@mattrax/ms-mde": "workspace:*",
 		"@microlabs/otel-cf-workers": "1.0.0-rc.48",
 		"@opentelemetry/api": "^1.9.0",
 		"@paralleldrive/cuid2": "^2.2.2",
