--- a/packages/trpc-server-function/package.json
+++ b/packages/trpc-server-function/package.json
@@ -13,14 +13,14 @@
 	},
 	"dependencies": {
 		"@solid-mediakit/trpc": "^3.0.3",
-		"@solidjs/router": "0.14.5",
+		"@solidjs/router": "0.14.7",
 		"@tanstack/query-core": "^5.56.2",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"seroval": "^1.1.1"
 	},
 	"peerDependencies": {
-		"vinxi": "*",
-		"solid-js": "*"
+		"solid-js": "*",
+		"vinxi": "*"
 	}
 }
