fix wap provisioning profile generation + `ms-mdm` wip

--- a/packages/ms-mdm/package.json
+++ b/packages/ms-mdm/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@mattrax/ms-mde",
-	"description": "Types for MS-MDE and related protocols.",
+	"name": "@mattrax/ms-mdm",
+	"description": "Types for MS-MDM",
 	"type": "module",
 	"private": true,
 	"sideEffects": false,
