--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -15,32 +15,59 @@ env:
   CLOUDFLARE_DEFAULT_ACCOUNT_ID: f02b3ef168fe64129e9941b4fb2e4dc1
 
 jobs:
-  sst:
-    name: SST
+  landing:
+    name: Landing
     runs-on: ubuntu-latest
     environment: production
     concurrency:
       group: production
+    env:
+      WAITLIST_URL: https://web.mattrax.app/api/waitlist
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
-      
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::101829795063:role/mattrax-gh-actions"
-          aws-region: us-east-1
-          role-session-name: mattrax-sst-workflow
       
       - uses: pnpm/action-setup@v4
         with:
           version: latest
       
-      - name: Rust cache
-        uses: Swatinem/rust-cache@v2
-      
       - name: Install dependencies
         run: pnpm i
       
-      - name: SST
-        run: pnpm sst deploy --stage prod
+      - name: Build
+        working-directory: apps/landing
+        run: pnpm build
+      
+      - name: Deploy
+        working-directory: apps/landing
+        run: pnpm wrangler pages deploy
+
+  # sst:
+  #   name: SST
+  #   runs-on: ubuntu-latest
+  #   environment: production
+  #   concurrency:
+  #     group: production
+  #   steps:
+  #     - name: Git clone the repository
+  #       uses: actions/checkout@v4
+      
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         role-to-assume: "arn:aws:iam::101829795063:role/mattrax-gh-actions"
+  #         aws-region: us-east-1
+  #         role-session-name: mattrax-sst-workflow
+      
+  #     - uses: pnpm/action-setup@v4
+  #       with:
+  #         version: latest
+      
+  #     - name: Rust cache
+  #       uses: Swatinem/rust-cache@v2
+      
+  #     - name: Install dependencies
+  #       run: pnpm i
+      
+  #     - name: SST
+  #       run: pnpm sst deploy --stage prod
