--- a/apps/landing/wrangler.toml
+++ b/apps/landing/wrangler.toml
@@ -1,15 +1,4 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "landing-dev"              # TODO
+name = "landing"
 compatibility_date = "2024-10-22"
-workers_dev = true                # TODO: Auth for this
-
-# route = { pattern = "todo-landing.mattrax.app/*", zone_name = "mattrax.app" } # TODO: Domain
-
-main = "./.output/server/index.mjs"                              # TODO: ".output/server/index.mjs"
-assets = { directory = "./.output/public/", binding = "ASSETS" }
-
-[build]
-command = "NITRO_PRESET=cloudflare-module pnpm build"
-
-# [vars]
-# WAITLIST_URL = "https://web.mattrax.app/api/waitlist"
+pages_build_output_dir = "./.output"
