--- a/apps/landing/wrangler.toml
+++ b/apps/landing/wrangler.toml
@@ -1,4 +1,4 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "landing"
 compatibility_date = "2024-10-22"
-pages_build_output_dir = "./.output"
+pages_build_output_dir = "./dist"
